<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>panda_ft_sensor_calibration</name>
  <version>0.0.0</version>
  <description>Force-Torque sensor calibration procedures for Panda robot used in Agimus project</description>
  <maintainer email="kwojciecho@laas.fr">Krzysztof Wojciechowski</maintainer>
  <author email="kwojciecho@laas.fr">Krzysztof Wojciechowski</author>

  <license>BSD-3-clause</license>
  <url type="website">https://github.com/agimus-project/agimus_controller</url>

  <build_depend>generate_parameter_library</build_depend>
  <build_depend>generate_parameter_library_py</build_depend>

  <!-- ROS dependencies. -->
  <depend>agimus_demos_common</depend>
  <depend>linear_feedback_controller_msgs</depend>
  <depend>linear_feedback_controller</depend>
  <depend>net_ft_driver</depend>
  <depend>net_ft_diagnostic_broadcaster</depend>
  <depend>net_ft_description</depend>
  <depend>rclpy</depend>
  <depend>xacro</depend>

  <!-- Run-time dependencies -->
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pinocchio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
